--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://unpkg.byted-static.com/latest/byted/arco-config/assets/favicon.ico"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="icons/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Arco Design Pro - 开箱即用的中台前端/设计解决方案</title>
+    <title>青年大学习邮件提醒系统</title>
   </head>
   <body>
     <div id="root"></div>
